2008-08-31  Philip Withnall  <philip@tecnocode.co.uk>

	* data/mcus.ui:
	* src/interface.c:
	* src/main.c:
	* src/main.h:
	* src/simulation.c:
	* src/simulation.h: Upgrade the stack to be dynamic, and ensure the
	entire microcontroller state is stored in each stack frame, rather than
	just a return address.

2008-08-30  Philip Withnall  <philip@tecnocode.co.uk>

	* src/compiler.c: Fix constant addressing for jump instructions.

2008-08-26  Philip Withnall  <philip@tecnocode.co.uk>

	* data/mcus.ui:
	* src/input-port.c:
	* src/main-window.c: Fix some problems with the input devices connected
	to the input port.

2008-08-17  Philip Withnall  <philip@tecnocode.co.uk>

	* src/compiler.c:
	* src/instructions.h: Renamed the "END" instruction "HALT".
	* data/mcus.ui:
	* src/Makefile.am:
	* src/analogue-input.c:
	* src/analogue-input.h:
	* src/input-port.c:
	* src/input-port.h:
	* src/interface.c:
	* src/interface.h:
	* src/main-window.c:
	* src/main.h:
	* src/simulation.c: Lots of refactoring of the simulation code as
	regards the interface. Added more input and output devices, and hooked
	them all up. Refactored error dialogues to use API more correctly.

2008-06-15  Philip Withnall  <philip@tecnocode.co.uk>

	* src/compiler.c:
	* src/instructions.h: Added context-sensitive help to error messages
	about operands of the wrong type.
	* data/mcus.ui:
	* src/Makefile.am:
	* src/interface.c:
	* src/simulation.c:
	* src/widgets/led.c:
	* src/widgets/led.h:
	* src/widgets/seven-segment-display.c:
	* src/widgets/seven-segment-display.h: Added LED and SSD widgets, and
	started to use them to visualise the output port in various ways.
	Also added the beginnings of support for visually setting the input
	port value in a similar manner.

2008-05-30  Philip Withnall  <philip@tecnocode.co.uk>

	* data/ocr-assembly.lang: Fixed a bug in highlighting labels.
	* src/main.c: Ensured that all saved files have the ".asm" extension
	for Windows compatibility.
	* src/Makefile.am: