@@ -37,7 +37,10 @@ G_BEGIN_DECLS
 
 enum {
 	MCUS_COMPILER_ERROR_INVALID_LABEL,
+	MCUS_COMPILER_ERROR_INVALID_LABEL_DELIMITATION,
 	MCUS_COMPILER_ERROR_INVALID_MNEMONIC,
+	MCUS_COMPILER_ERROR_INVALID_DIRECTIVE_NAME,
+	MCUS_COMPILER_ERROR_INVALID_DIRECTIVE_DELIMITATION,
 	MCUS_COMPILER_ERROR_INVALID_OPERAND,
 	MCUS_COMPILER_ERROR_INVALID_OPERAND_TYPE,
 	MCUS_COMPILER_ERROR_UNRESOLVABLE_LABEL,
